--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -108,10 +108,10 @@ add_custom_command(
 )
 
 
-
+# mpw-shell-execute.cpp mpw-shell-builtins.cpp 
 add_executable(mpw-shell mpw-shell.cpp mpw-shell-read.cpp mpw-shell-token.cpp mpw-shell-expand.cpp 
-	mpw-shell-execute.cpp mpw-shell-builtins.cpp mpw-shell-parser.cpp value.cpp mpw-shell-quote.cpp 
-	phase1.cpp phase2.cpp phase2-parser.cpp command.cpp)
+	mpw-shell-parser.cpp value.cpp mpw-shell-quote.cpp 
+	phase1.cpp phase2.cpp phase2-parser.cpp command.cpp environment.cpp builtins.cpp)
 
 # all this for -std=c++14
 set_property (TARGET mpw-shell PROPERTY CXX_STANDARD 14)
