include generated lemon++ parser code so lemon++ isn't needed.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -89,13 +89,24 @@ RAGEL_TARGET(value value.rl value.cpp COMPILE_FLAGS "-p -G2")
 
 
 # need to copy all OUTPUT file to the build dir
-add_custom_command(
-	OUTPUT phase3.cpp phase3.h phase3.out
-	COMMAND lemon++ phase3.lemon
-	COMMAND mv -f phase3.cpp phase3.h phase3.out ${CMAKE_CURRENT_BINARY_DIR}/
-	MAIN_DEPENDENCY phase3.lemon 
-	WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
-)
+# add_custom_command(
+# 	OUTPUT phase3.cpp phase3.h phase3.out
+# 	COMMAND lemon++ phase3.lemon
+# 	COMMAND mv -f phase3.cpp phase3.h phase3.out ${CMAKE_CURRENT_BINARY_DIR}/
+# 	MAIN_DEPENDENCY phase3.lemon 
+# 	WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
+# )
+
+find_program(LEMON_PLUSPLUS NAMES lemon++)
+if (LEMON_PLUSPLUS)
+	add_custom_command(
+		OUTPUT ${CMAKE_CURRENT_SOURCE_DIR}/phase3.cpp ${CMAKE_CURRENT_SOURCE_DIR}/phase3.h
+		#COMMAND cp -f "${CMAKE_CURRENT_SOURCE_DIR}/parser.lemon" "parser.lemon"
+		COMMAND lemon++ phase3.lemon
+		MAIN_DEPENDENCY phase3.lemon
+		WORKING_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}"
+	)
+endif()
 
 
 add_executable(mpw-shell mpw-shell.cpp  mpw-shell-token.cpp mpw-shell-expand.cpp 
