--- a/.github/workflows/cmake-macos.yml
+++ b/.github/workflows/cmake-macos.yml
@@ -1,4 +1,4 @@
-name: CMake MacOS 11
+name: CMake MacOS
 
 on: [push]
 
@@ -7,14 +7,10 @@ env:
 
 jobs:
   build:
-    runs-on: macos-11.0
+    runs-on: macos-latest
 
     steps:
     - uses: actions/checkout@v2
-
-    - name: xcode 12.2
-      shell: bash
-      run: sudo xcode-select -s /Applications/Xcode_12.2.app
 
     - name: Brew
       run: brew install ragel
