--- a/.github/workflows/cmake-ubuntu.yml
+++ b/.github/workflows/cmake-ubuntu.yml
@@ -13,7 +13,7 @@ jobs:
     - uses: actions/checkout@v4
   
     - name: apt-get
-      run: sudo apt-get install ragel
+      run: sudo apt-get install ragel libreadline-dev
 
     - name: Create Build Environment
       run: cmake -E make_directory ${{runner.workspace}}/build
